Test/git-issues/git-issue-748.dfy.expect
git-issue-748.dfy(17,6): Error: ident expected
git-issue-748.dfy(18,6): Error: ident expected
git-issue-748.dfy(19,6): Error: ident expected
3 parse errors detected in git-issue-748.dfy
